# sheets-app

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.devcontainer/: Dockerfile  devcontainer.json
backend/: .env.db.dev.example  .env.db.prod.example  .env.dev.example  .env.prod.example  Dockerfile.prod  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260409_01_create_workspaces_and_sheets.py  20260409_02_normalize_workspace_domain.py  20260409_03_add_user_password_hash.py  20260409_04_add_email_verification.py  20260413_01_add_sheet_cell_history.py  20260415_01_add_sheet_styles_json.py
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/auth/: __init__.py  router.py
backend/app/api/v1/health/: router.py
backend/app/api/v1/workspaces/: __init__.py  router.py  sheets.py  workspaces.py
backend/app/core/: config.py  logger.py  security.py
backend/app/infrastructure/db/: database.py
backend/app/models/: __init__.py  activity.py  cell_history.py  sheet.py  user.py  workbook.py  workspace.py
backend/app/repositories/: __init__.py  sheets.py  users.py  workspaces.py
backend/app/schemas/: __init__.py  auth.py  common.py  documents.py  sheets.py  workspace.py  workspaces.py
backend/app/services/: __init__.py  auth.py  email.py  workspace_service.py
backend/app/services/workspace/: __init__.py  builders.py  constants.py  fixtures.py  naming.py  ordering.py  seed.py  serialization.py  service.py  validation.py
config/: nginx.prod.conf
(+66 files in other folders)
